Fixed the button not showing properly on top of everything

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -49,12 +49,13 @@
     top: 0;
     padding-left: 98%;
     text-align: end;
-    background-color: #fff;
+    background-color: transparent;
     border: none;
     font-size: 1.275rem;
     color: #777;
     cursor: pointer;
     transition: color 0.2s ease-in-out;
+    z-index: 10;
 }
 
 .closeButton:hover {
